--- a/home.html
+++ b/home.html
@@ -1,32 +1,21 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="..\styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Home
+  Cultura Game - Home
 </title>
-
-
 <body>
-    <center>
-        <img src="/home/dougcaval/Desktop/Cultura Game/imgs/cartooncultura.png" class="d-block w-50" alt="400">
-    </center>
-<center>
-    <img src="/home/dougcaval/Desktop/Cultura Game/imgs/realmente.png" class="d-block w-50" alt="400">
-</center>
-<center>
-
-
-<a href="pergunta1.html" class="btn btn-primary">Quero Jogar</a>
-<a href="cartoons.html" class="btn btn-info">Ver Cartoons</a>
-</center>  
-
-<center>
-    <img src="/home/dougcaval/Desktop/Cultura Game/imgs/avatarhome.png" class="d-block w-100" alt="400">
-</center>
+  <div class="card container container-congrats">
+    <img class="card-img-top card-img-congrats" src="imgs/cartooncultura.png">
+    <img class="card-img-top card-img-congrats" src="imgs/avatarhome.png">
+    <a href="pergunta1.html" class="btn btn-primary">Quero Jogar</a>
+    <a href="cartoons.html" class="btn btn-info">Ver Cartoons</a>
+  </div>
 </body>
 </html>
