--- a/Perguntas/pergunta1.html
+++ b/Perguntas/pergunta1.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../styles.scss">
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" >
 </head>
 <title>
   Cultura Game - Pergunta 1
