--- a/Perguntas/pergunta13.html
+++ b/Perguntas/pergunta13.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../styles.scss">
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-</head>
+  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" ></head>
 <title>
   Cultura Game - Pergunta 13
 </title>
