--- a/cartoons.html
+++ b/cartoons.html
@@ -3,25 +3,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<<<<<< add-styles
   <link rel="stylesheet" href="styles.scss">
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-=======
-  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" >
->>>>>> main
 </head>
 <title>
   Cultura Game - Home
 </title>
 <body>
   <div class="container container-congrats flexbox">
-    <img class="card-img-top card-img-congrats" src="cartoons\resolvaOProblemaCerto.jpeg">
-    <img class="card-img-top card-img-congrats" src="cartoons\sejaTransformador.png">
-    <img class="card-img-top card-img-congrats"  src="cartoons\somosColaborativos.jpeg">
-    <img class="card-img-top card-img-congrats"  src="cartoons\somosGuardioes.jpeg">
-    <img class="card-img-top card-img-congrats"  src="cartoons\vaiQueda.jpeg">
-    <img class="card-img-top card-img-congrats"  src="cartoons\zupperAjudaZupper.jpeg">
+    <img class="card-img-top card-img-congrats" src="Cartoons/resolvaOProblemaCerto.jpeg">
+    <img class="card-img-top card-img-congrats" src="Cartoons/sejatransformador.png">
+    <img class="card-img-top card-img-congrats"  src="Cartoons/somosColaborativos.jpeg">
+    <img class="card-img-top card-img-congrats"  src="Cartoons/somosGuardioes.jpeg">
+    <img class="card-img-top card-img-congrats"  src="Cartoons/vaiQueDa.jpeg">
+    <img class="card-img-top card-img-congrats"  src="Cartoons/zupperAjudaZupper.jpeg">
     <p class="exit">
       <a href="home.html" class="btn btn-exit">Sair</a>
     </p>
